<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">


    <ImageView
        android:id="@+id/item_thumbnail"
        android:layout_width="75dp"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/thumbnail_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="260dp"
        android:layout_height="44dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/item_thumbnail"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:maxLength="50"
        android:text="@string/itemname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_thumbnail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/item_thumbnail"
        android:layout_alignStart="@+id/itemName"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/itemratings"
        app:layout_constraintBottom_toBottomOf="@+id/item_thumbnail"
        app:layout_constraintStart_toEndOf="@+id/item_thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/itemName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/itemName"
        android:layout_alignTop="@+id/itemRating"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/itemprice"
        app:layout_constraintBottom_toBottomOf="@+id/item_thumbnail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemName" />

    <TextView
        android:id="@+id/itemDescription"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/itemdescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/item_thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/item_thumbnail" />

</android.support.constraint.ConstraintLayout>